# promptmate

./: .gitattributes  .gitignore  .prettierignore  2026-07-14_130423-prompt-assistant-development-plan.md  2026-07-14_133048-prompt-assistant-handoff.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  prompt-assistant-prototype.html  vite.config.ts  交接文档.md
.hermes/plans/: 2026-07-14_194226-remaining-features.md
resources/builtin/prompts/: README.md  image.jsonl  video.jsonl
resources/schemas/: prompt-concept.schema.json
scripts/: generate-validators.mjs
src/: App.aiAssistance.test.tsx  App.copyBuiltinPrompt.test.tsx  App.createUserPrompt.test.tsx  App.deleteImportedPrompt.test.tsx  App.deleteUserPrompt.test.tsx  App.editImportedPrompt.test.tsx  App.editUserPrompt.test.tsx  App.exportPrompt.test.tsx  App.imageToPrompt.test.tsx  App.importPrompt.test.tsx  App.importReport.test.tsx  App.test.tsx  App.tsx  App.videoToPrompt.test.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  lib.rs  main.rs
src-tauri/tests/: ai_contract.rs
src/data/: prompts.ts
src/features/ai/: AiCompletionPanel.tsx  AiSettingsDialog.tsx  ImagePromptWorkspace.test.tsx  ImagePromptWorkspace.tsx  VideoPromptWorkspace.test.tsx  VideoPromptWorkspace.tsx  aiNativeClient.test.ts  aiNativeClient.ts  aiProviderConfig.test.ts  aiProviderConfig.ts  aiSuggestion.test.ts  aiSuggestion.ts  imagePromptInput.test.ts  imagePromptInput.ts  safeAiError.ts  videoPromptInput.test.ts  videoPromptInput.ts
src/features/prompt-library/: browserDownload.test.ts  browserDownload.ts  builtinPresets.test.ts  builtinPresets.ts  builtinPrompts.test.ts  builtinPrompts.ts  favoriteStorage.test.ts  favoriteStorage.ts  filterPrompts.test.ts  filterPrompts.ts  libraryCatalog.ts  parsePromptImport.test.ts  parsePromptImport.ts  types.ts  (+20 more)
