[package]
name = "promptmate"
version = "0.1.0"
description = "A local-first prompt library and composition assistant for Windows"
authors = ["PromptMate contributors"]
license = "Apache-2.0"
repository = "https://github.com/bilinanxi/promptmate"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "promptmate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
keyring = { version = "3", features = ["windows-native"] }
url = "2"
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "sync"] }
base64 = "0.22"
image = { version = "=0.25.5", default-features = false, features = ["jpeg"] }
